Update audio stream logic

--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
     <h1 style="animation-delay: .1s;">Loaf Radio&nbsp;</h1>
                               <p style="animation-delay: 0.2s;">every weekday @ 9pm EST</p>
                               <p style="animation-delay: 0.2s;">
-                                <button onclick="toggleAudio()" id='pause-button'></button></p>
+                                <audio id="music" preload="all">
+                                  <source src="https://loaf.out.airtime.pro/loaf_a">
+                               </audio>
+                                <button id='pause-button'></button></p>
                                 <p style="animation-delay: 0.3s;">M&nbsp; &nbsp;SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; T&nbsp; &nbsp;SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; W&nbsp; &nbsp;SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Th&nbsp; SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; F&nbsp; &nbsp;SHOW w/</p>
                                 <p style="animation-delay: 0.4s;">*tune in for a slice of life*</p>
                                                                                                                                                                                       </div>
