--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- built with temper: http://temper.jonaspelzer.com -->
 <!DOCTYPE html>
 <html>
 <head style="display:block;">
@@ -116,11 +115,16 @@
                                   <source src="https://loaf.out.airtime.pro/loaf_a">
                                </audio>
                                 <button id='pause-button'></button></p>
-                                <p style="animation-delay: 0.3s;">M&nbsp; &nbsp;SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; T&nbsp; &nbsp;SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; W&nbsp; &nbsp;SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Th&nbsp; SHOW w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; F&nbsp; &nbsp;SHOW w/</p>
+                                <p style="animation-delay: 0.3s;">
+                                M&nbsp; &nbsp;Rainy Day Fund w/ Andrew&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                                T&nbsp; &nbsp;Pleasures and Days w/ Will&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                                W&nbsp; &nbsp;Up Close & Personal w/ Dan&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                                Th&nbsp; &nbsp;Loose Change w/ Chris&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+                                F&nbsp; &nbsp;The Slop Shop w/ Craig&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                Sa&nbsp; &nbsp;-off-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                                Su&nbsp; &nbsp;Sludge w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                                 <p style="animation-delay: 0.4s;">*tune in for a slice of life*</p>
                                                                                                                                                                                       </div>
-
   <script type="text/javascript">const fs = 3.5;</script>
-  <script type="text/javascript" src="https://temper.jonaspelzer.com/assets/js/watermark.js"></script>
 </body>
 </html>
