--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- built with temper: http://temper.jonaspelzer.com -->
 <!DOCTYPE html>
 <html>
 <head style="display:block;">
@@ -124,7 +125,8 @@
                                 Sa&nbsp; &nbsp;-off-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                                 Su&nbsp; &nbsp;Sludge w/&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                                 <p style="animation-delay: 0.4s;">*tune in for a slice of life*</p>
-                                                                                                                                                                                      </div>
-  <script type="text/javascript">const fs = 3.5;</script>
-</body>
-</html>
+
+   <script type="text/javascript">const fs = 3.5;</script>
+   <script type="text/javascript" src="https://temper.jonaspelzer.com/assets/js/watermark.js"></script>
+ </body>
+ </html>
