--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   crossorigin="anonymous"></script>
   <script src='main.js'></script>
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <title>Loaf Radio</title>
+  <title>loaf radio</title>
 
   
     <link class="googlefont" href="
@@ -109,15 +109,15 @@
 </head>
 <body style="display:none;">
   <div class="text">
-    <h1 style="animation-delay: .1s;">Loaf Radio&nbsp;</h1>
-                              <p style="animation-delay: 0.2s;">every weekday @ 9pm EST</p>
+    <h1 style="animation-delay: .1s;">loaf radio&nbsp;</h1>
+                              <p style="animation-delay: 0.2s;">streaming everyday @ 9pm EST</p>
                               <p style="animation-delay: 0.2s;">
                                 <audio id="music" preload="all">
                                   <source src="https://loaf.out.airtime.pro/loaf_a">
                                </audio>
                                 <button id='pause-button'></button></p>
                                 <p style="animation-delay: 0.3s;">
-                                M&nbsp; &nbsp;Rainy Day Fund w/ Andrew&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; T&nbsp; &nbsp;Pleasures and Days w/ Will&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; W&nbsp; &nbsp;Up Close & Personal w/ Dan&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Th&nbsp; &nbsp;Loose Change w/ Chris&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; F&nbsp; &nbsp;The Slop Shop w/ Craig&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Sa&nbsp; &nbsp;-OFF-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Su&nbsp; &nbsp;Sludge w/ Jon&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                                M&nbsp; &nbsp;Rainy Day Fund w/ Andrew&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; T&nbsp; &nbsp;Pleasures and Days w/ Will&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  W&nbsp; &nbsp;Up Close & Personal w/ <a href="https://www.instagram.com/realdanlim/"  target="_blank">Dan</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Th &nbsp;Loose Change w/ Chris&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; F&nbsp; &nbsp;The Slop Shop w/ Craig&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Sa&nbsp; Weekly Special w/ Rotating Host&nbsp; &nbsp; &nbsp;  Su&nbsp; Sludge w/ Jon&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                                 <p style="animation-delay: 0.4s;">*tune in for a slice of life*</p>
 
    <script type="text/javascript">const fs = 3.5;</script>
