--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   }
 
   body {
-    background: #fac832;
+    background: #a3d963;
     color: #ffffff;
     width: 100%;
   }
@@ -54,7 +54,7 @@
   .text p, h1 {
     opacity: 0;
     animation: fadein .2s forwards ease-out;
-    padding: 1.4vw 10vw 2.1vw 3vw;
+    padding: 1vw 0vw 0vw 4vw;
   }
 
   .text a {
@@ -109,17 +109,34 @@
 </head>
 <body style="display:none;">
   <div class="text">
-    <h1 style="animation-delay: .1s;">loaf radio&nbsp;</h1>
-                              <p style="animation-delay: 0.2s;">streaming everyday @ 9pm EST</p>
+  <br/>  
+<h1 style="animation-delay: .1s;"><span style ="background-color: #333333">&nbsp;loaf radio&nbsp;</span></h1>
+<br/>
+                              <p style="animation-delay: 0.2s;"><span style ="background-color: #333333">&nbsp;streaming daily @ 9pm EST&nbsp;</p></span>
+<br/>
                               <p style="animation-delay: 0.2s;">
                                 <audio id="music" preload="all">
                                   <source src="https://loaf.out.airtime.pro/loaf_a">
                                </audio>
                                 <button id='pause-button'></button></p>
+<br/>
+                              <p style="animation-delay: 0.3s;">
+                               su&nbsp; Sludge w/ Jon</p>
                                 <p style="animation-delay: 0.3s;">
-                                M&nbsp; &nbsp;Rainy Day Fund w/ Andrew&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; T&nbsp; &nbsp;Pleasures and Days w/ Will&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  W&nbsp; &nbsp;Up Close & Personal w/ <a href="https://www.instagram.com/realdanlim/"  target="_blank">Dan</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Th &nbsp;Loose Change w/ Chris&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; F&nbsp; &nbsp;The Slop Shop w/ Craig&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Sa&nbsp; Weekly Special w/ Rotating Host&nbsp; &nbsp; &nbsp;  Su&nbsp; Sludge w/ Jon&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
-                                <p style="animation-delay: 0.4s;">*tune in for a slice of life*</p>
-
+                                m&nbsp;&nbsp; Rainy Day Fund w/ Andrew</p>
+                                <p style="animation-delay: 0.4s;">
+                                tu&nbsp; Pleasures and Days w/ Will</p>
+                                <p style="animation-delay: 0.4s;">
+                                w&nbsp; &nbsp;Up Close & Personal  w/ <a href="https://www.instagram.com/realdanlim/"  target="_blank">Dan</a></p>
+                                <p style="animation-delay: 0.5s;">
+                                th &nbsp;Loose Change w/ Chris</p>
+                                <p style="animation-delay: 0.5s;">
+                                f&nbsp; &nbsp;The Slop Shop w/ Craig</p>
+                                <p style="animation-delay: 0.6s;">
+                                sa&nbsp; Weekly Special w/ Rotating Host</p>
+<br/>
+                                <p style="animation-delay: 0.4s;"><span style ="background-color: #333333">&nbsp;*tune in for a slice of life*&nbsp;</span></p>
+<br/>
    <script type="text/javascript">const fs = 3.5;</script>
    <script type="text/javascript" src="https://temper.jonaspelzer.com/assets/js/watermark.js"></script>
  </body>
