--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <br/>
                               <p style="animation-delay: 0.2s;">
                                 <audio id="music" preload="all">
-                                  <source src="https://loafradio.out.airtime.pro/loafradio_a">
+                                  <source src="https://hoth.alonhosting.com:1215/stream">
                                </audio>
                                 <button id='pause-button'></button></p>
 <br/>
