--- a/index.html
+++ b/index.html
@@ -120,20 +120,20 @@
                                </audio>
                                 <button id='pause-button'></button></p>
 <br/>
-                              <p style="animation-delay: 0.3s;">
-                               su&nbsp; Sludge w/ Jon</p>
                                 <p style="animation-delay: 0.3s;">
-                                m&nbsp;&nbsp; Rainy Day Fund w/ Andrew</p>
+                               su&nbsp; sludge w/ jon</p>
+                                <p style="animation-delay: 0.3s;">
+                                m&nbsp;&nbsp; rainy day fund w/ andrew</p>
                                 <p style="animation-delay: 0.4s;">
-                                tu&nbsp; Pleasures and Days w/ Will</p>
+                                tu&nbsp; pleasures and days w/ will</p>
                                 <p style="animation-delay: 0.4s;">
-                                w&nbsp; &nbsp;Up Close & Personal  w/ <a href="https://www.instagram.com/realdanlim/"  target="_blank">Dan</a></p>
+                                w&nbsp; &nbsp;up close & personal  w/ <a href="https://www.instagram.com/realdanlim/"  target="_blank">dan</a></p>
                                 <p style="animation-delay: 0.5s;">
-                                th &nbsp;Loose Change w/ Chris</p>
+                                th &nbsp;loose change w/ chris</p>
                                 <p style="animation-delay: 0.5s;">
-                                f&nbsp; &nbsp;The Slop Shop w/ Craig</p>
+                                f&nbsp; &nbsp;the slop shop w/ craig</p>
                                 <p style="animation-delay: 0.6s;">
-                                sa&nbsp; Weekly Special w/ Rotating Host</p>
+                                sa&nbsp; weekly special w/ rotating host</p>
 <br/>
                                 <p style="animation-delay: 0.4s;"><span style ="background-color: #333333">&nbsp;*tune in for a slice of life*&nbsp;</span></p>
 <br/>
