--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   }
 
   #pause-button {
-    background-color: Transparent;
+    background-color: #333333;
     background-repeat:no-repeat;
     border: none;
     cursor:pointer;
