--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <audio id="music" preload="all">
                                   <source src="https://loafradio.out.airtime.pro/loafradio_a">
                                </audio>
-                                <button id='pause-button'></button></p>
+                                &nbsp;<button id='pause-button'></button>&nbsp;</p>
 <br/>
                                 <p style="animation-delay: 0.3s;">
                                su&nbsp; sludge w/ jon</p>
