--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   }
 
   #pause-button {
-    background-color: #333333;
+    background-color: Transparent;
     background-repeat:no-repeat;
     border: none;
     cursor:pointer;
@@ -118,7 +118,7 @@
                                 <audio id="music" preload="all">
                                   <source src="https://loafradio.out.airtime.pro/loafradio_a">
                                </audio>
-                                &nbsp;<button id='pause-button'></button>&nbsp;</p>
+                                <button id='pause-button'></button></p>
 <br/>
                                 <p style="animation-delay: 0.3s;">
                                su&nbsp; sludge w/ jon</p>
