--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <p style="animation-delay: 0.4s;">
                                 tu&nbsp; pleasures and days w/ will</p>
                                 <p style="animation-delay: 0.4s;">
-                                w&nbsp; &nbsp;up close & personal  w/ <a href="https://www.instagram.com/realdanlim/"  target="_blank">dan</a></p>
+                                w&nbsp; &nbsp;pantry goods w/ dan</p>
                                 <p style="animation-delay: 0.5s;">
                                 th &nbsp;loose change w/ chris</p>
                                 <p style="animation-delay: 0.5s;">
