--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head style="display:block;">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="favicon.ico" type="image/x-con"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
