--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                                 <p style="animation-delay: 0.4s;">
                                 tu&nbsp; pleasures and days w/ will</p>
                                 <p style="animation-delay: 0.4s;">
-                                w&nbsp; &nbsp;pantry goods w/ dan</p>
+                                w&nbsp; &nbsp;loose change w/ chris</p>
                                 <p style="animation-delay: 0.5s;">
-                                th &nbsp;loose change w/ chris</p>
+                                th&nbsp;&nbsp;pantry goods w/ dan</p>
                                 <p style="animation-delay: 0.5s;">
                                 f&nbsp; &nbsp;the slop shop w/ craig</p>
                                 <p style="animation-delay: 0.6s;">
