--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <br/>
                               <p style="animation-delay: 0.2s;">
                                 <audio id="music" preload="all">
-                                  <source src="https://loaf.out.airtime.pro/loaf_a">
+                                  <source src="http://stream.radiojar.com/8u5ndtq8uwzuv">
                                </audio>
                                 <button id='pause-button'></button></p>
 <br/>
