--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- built with temper: http://temper.jonaspelzer.com -->
 <!DOCTYPE html>
 <html>
-<head style="display:block;">
+<style="display:block;">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="favicon.ico" type="image/x-con"/>
@@ -15,9 +15,9 @@
   <title>loaf radio</title>
 
   
-    <link class="googlefont" href="
-    https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i
-    " rel="stylesheet">
+  <link class="googlefont" href="
+  https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i
+  " rel="stylesheet">
 
   
   <style type="text/css" style="display:block">
@@ -137,6 +137,8 @@
                                 sa&nbsp; weekly special w/ rotating host</p>
 <br/>
                                 <p style="animation-delay: 0.4s;"><span style ="background-color: #333333">&nbsp;*tune in for a slice of life*&nbsp;</span></p>
+<br/>
+                                <p style="animation-delay: 0.4s;"><span style ="background-color: #333333">&nbsp;<u><a href="https://www.mixcloud.com/loafradio/" target="_blank">show archives</a></u>&nbsp;</span></p>
 <br/>
    <script type="text/javascript">const fs = 3.5;</script>
    <script type="text/javascript" src="https://temper.jonaspelzer.com/assets/js/watermark.js"></script>
