--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- built with temper: http://temper.jonaspelzer.com -->
 <!DOCTYPE html>
 <html>
-<style="display:block;">
+<head="display:block;">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="favicon.ico" type="image/x-con"/>
@@ -106,7 +106,6 @@
     }
   }
   </style>
-
 </head>
 <body style="display:none;">
   <div class="text">
