--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <p style="animation-delay: 0.3s;">
                                 m&nbsp;&nbsp; rainy day fund w/ andrew</p>
                                 <p style="animation-delay: 0.4s;">
-                                tu&nbsp; pleasures and days w/ will</p>
+                                tu&nbsp; ultraviolet w/ ube</p>
                                 <p style="animation-delay: 0.4s;">
                                 w&nbsp; &nbsp;loose change w/ chris</p>
                                 <p style="animation-delay: 0.5s;">
