--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
   <script src='main.js'></script>
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title>loaf radio</title>
-
   
   <link class="googlefont" href="
   https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i
   " rel="stylesheet">
-
   
   <style type="text/css" style="display:block">
   * {
@@ -28,36 +26,29 @@
     font-size: 100%;
     font-weight: inherit;
   }
-
   body {
-    background: #fcab4f;
+    background: #191970;
     color: #ffffff;
     width: 100%;
   }
-
-
   /* PAGE */
   .text {
     font-family:"Space Mono", monospace;
         display: none;
-
     font-size: 3.5vw;
     line-height: 3.5vw;
             font-variant-ligatures: normal;
   }
-
   h1 {
     font: inherit;
     line-height: inherit;
     letter-spacing: inherit;
   }
-
   .text p, h1 {
     opacity: 0;
     animation: fadein .2s forwards ease-out;
     padding: 1vw 0vw 0vw 4vw;
   }
-
   .text a {
     text-decoration: underline;
     text-decoration-skip: ink;
@@ -68,22 +59,18 @@
     margin-right: -.5vw;
     cursor: pointer;
   }
-
   .text a:hover {
     text-decoration: none;
   }
-
   .text a:focus {
     text-decoration: none;
     outline: solid 4px rgba(0,0,0,.4);
   }
-
     ::selection {
     background: #000;
     background: rgba(0,0,0,.99);
     color: #fff;
   }
-
   #pause-button {
     background-color: Transparent;
     background-repeat:no-repeat;
@@ -99,7 +86,6 @@
       opacity: 0;
       margin-top: 1.5vw;
     }
-
     100% {
       opacity: 1;
       margin-top: 0;
@@ -110,35 +96,17 @@
 <body style="display:none;">
   <div class="text">
   <br/>  
-<h1 style="animation-delay: .1s;"><span style ="background-color: #333333">&nbsp;loaf radio&nbsp;</span></h1>
+<h1 style="animation-delay: .1s;"><span style ="background-color: #191970">&nbsp;loaf radio&nbsp;</span></h1>
 <br/>
-                              <p style="animation-delay: 0.2s;"><span style ="background-color: #333333">&nbsp;streaming daily @ 9pm EST&nbsp;</p></span>
+                              <p style="animation-delay: 0.2s;"><span style ="background-color: #191970">&nbsp;streaming daily, IYKYK...&nbsp;</p></span>
 <br/>
                               <p style="animation-delay: 0.2s;">
                                 <audio id="music" preload="all">
                                   <source src="http://stream.radiojar.com/8u5ndtq8uwzuv">
                                </audio>
                                 <button id='pause-button'></button></p>
-<br/>
-                                <p style="animation-delay: 0.3s;">
-                               su&nbsp; sludge w/ jon</p>
-                                <p style="animation-delay: 0.3s;">
-                                m&nbsp;&nbsp; rainy day fund w/ andrew</p>
-                                <p style="animation-delay: 0.4s;">
-                                tu&nbsp; ultraviolet w/ ube</p>
-                                <p style="animation-delay: 0.4s;">
-                                w&nbsp; &nbsp;loose change w/ chris</p>
-                                <p style="animation-delay: 0.5s;">
-                                th&nbsp;&nbsp;pantry goods w/ dan</p>
-                                <p style="animation-delay: 0.5s;">
-                                f&nbsp; &nbsp;the slop shop w/ craig</p>
-                                <p style="animation-delay: 0.6s;">
-                                sa&nbsp; weekly special w/ rotating host</p>
-<br/>
-                                <p style="animation-delay: 0.4s;"><span style ="background-color: #333333">&nbsp;*tune in for a slice of life*&nbsp;</span></p>
-<br/>
-                                <p style="animation-delay: 0.4s;"><span style ="background-color: #333333">&nbsp;<u><a href="https://www.mixcloud.com/loafradio/" target="_blank">show archives</a></u>&nbsp;</span></p>
-<br/>
+
+  <br/>
    <script type="text/javascript">const fs = 3.5;</script>
    <script type="text/javascript" src="https://temper.jonaspelzer.com/assets/js/watermark.js"></script>
  </body>
