--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <br/>  
 <h1 style="animation-delay: .1s;"><span style ="background-color: #191970">&nbsp;loaf radio&nbsp;</span></h1>
 <br/>
-                              <p style="animation-delay: 0.2s;"><span style ="background-color: #191970">&nbsp;streaming daily, IYKYK...&nbsp;</p></span>
+                              <p style="animation-delay: 0.2s;"><span style ="background-color: #191970">&nbsp;&nbsp;</p></span>
 <br/>
                               <p style="animation-delay: 0.2s;">
                                 <audio id="music" preload="all">
